# moonlight

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  index.html  package-lock.json  package.json  svelte.config.js
.github/workflows/: deploy.yml  gh-pages-deploy.yml
.svelte-kit/: ambient.d.ts
ml/: package-lock.json  package.json
src/: lib.rs  main.rs
src/ml/: mod.rs
src/ml/clustering/: kmeans.rs
src/plot/: mod.rs  scatter.rs
src/routes/: +page.svelte
wasm/: moonlight.d.ts  moonlight.d.ts.br  moonlight.js  moonlight.js.br  moonlight_bg.wasm  moonlight_bg.wasm.br  moonlight_bg.wasm.d.ts  moonlight_bg.wasm.d.ts.br
wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
